[package]
name = "jupiter-swap-api-client"
version = "0.1.0"
description = "Jupiter Swap API rust client"
edition = { workspace = true }

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
thiserror = "2.0.12"
base64 = "0.22.1"
serde_qs = "0.14.0"
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal = "1.36.0"
